# base-app

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md
app/: Cargo.toml
app/src/: main.rs
argocd/applications/: base-app.yaml  echo-service.yaml  external-secrets.yaml  postgresql.yaml  vault.yaml
docker/: Dockerfile  base-app.Dockerfile  echo-service.Dockerfile
docs/: CONTRIB.md  RUNBOOK.md
k8s/base/: kustomization.yaml  service.yaml
k8s/base/base-app/: deployment.yaml  kustomization.yaml
k8s/base/echo-service/: deployment.yaml  kustomization.yaml  service.yaml
k8s/base/external-secrets/: cluster-secret-store.yaml  kustomization.yaml  vault-token-secret.yaml
k8s/base/postgresql/: deployment.yaml  external-secret.yaml  kustomization.yaml  pvc.yaml  service.yaml
k8s/base/vault/: deployment.yaml  init-job.yaml  kustomization.yaml  namespace.yaml  service.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/dev/base-app/: kustomization.yaml
k8s/overlays/dev/echo-service/: kustomization.yaml
k8s/overlays/dev/external-secrets/: kustomization.yaml
k8s/overlays/dev/postgresql/: kustomization.yaml
k8s/overlays/dev/vault/: kustomization.yaml
kind/: cluster-config.yaml
libs/common/: Cargo.toml
libs/common/src/: lib.rs
services/accounting-service/: Cargo.toml
services/accounting-service/migrations/: 20260213000001_create_accounts_table.sql
services/accounting-service/src/: config.rs  lib.rs  main.rs
services/accounting-service/src/domain/: account.rs
services/accounting-service/src/handlers/: account_handlers.rs  mod.rs
services/accounting-service/src/repository/: account_repository.rs  in_memory.rs  mod.rs  postgres.rs
services/accounting-service/tests/: postgres_repository_tests.rs
services/base-app/: Cargo.toml
services/echo-service/: Cargo.toml
services/echo-service/src/: main.rs
