[workspace]
resolver = "2"
members = [
    "services/base-app",
    "services/echo-service",
    "libs/common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
