[workspace]
resolver = "2"
members = [
    "services/base-app",
    "services/echo-service",
    "services/accounting-service",
    "libs/common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
validator = { version = "0.18", features = ["derive"] }
