[package]
name = "accounting-service"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../../libs/common" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
validator = { version = "0.18", features = ["derive"] }
lazy_static = "1"
regex = "1"
sqlx = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
axum-test = "16"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
