[package]
name = "base-app"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../../libs/common" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
